[metadata]
name = meeting_scheduler
version = 0.1.0
url = https://github.com/AntonKopiika/meeting_scheduler
license =
author = Anton Kopiika
author_email = toxxa099@gmail.com
description = A python service for booking meetings with your colleagues.

[options]
packages = meeting_scheduler
install_requires =
    psycopg2==2.9.1
    Flask==2.0.1
    Werkzeug==2.0.1
    flask-restful==0.3.9
    flask-sqlalchemy==2.5.1
    marshmallow-sqlalchemy==0.26.1
    marshmallow==3.12.1
    pytest==6.2.4
    flask_bcrypt==0.7.1
    setuptools==57.1.0
    injections==0.2.2
    sqlalchemy-utils==0.37.8
    DateTimeRange==1.2.0
    requests==2.26.0
    msal==1.13.0
    Flask-Session==0.4.0
    flask-talisman==0.8.1

[isort]
profile=hug
src_paths=meeting_scheduler, test
verbose = True

[flake8]
max-line-length = 88
ignore = E402,F401